--- a/.env
+++ b/.env
@@ -1,8 +1,3 @@
-# Gemini Configuration
-GEMINI_API_KEY=AIzaSyBElIRoFJZe3-nLcRKKORsk32fYdKKE_6g
-GEMINI_MODEL=gemini-pro
-
-# API Configuration
-API_HOST=127.0.0.1
-API_PORT=8000
-DEBUG=True
+PROVIDER=gemini
+MODEL_API_KEY=AIzaSyC6MO2BymAVvIQGlZ6HSZMRk0DAeCaNh6s
+MODEL_NAME=gemini-2.5-flash
