phase 4 finished     Raw SQL execution     No ORM     Secure SELECT-only validation     Dynamic answer formatting     Real DB data returned     Clean layered architecture

--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PROVIDER=gemini
-MODEL_API_KEY=AIzaSyC6MO2BymAVvIQGlZ6HSZMRk0DAeCaNh6s
+MODEL_API_KEY=AIzaSyDwOGiROOjRNz7nQuwm9cbv2ja9jMaAs6k
 MODEL_NAME=gemini-2.5-flash
+DB_SERVER=localhost
+DB_DATABASE=InventoryDB
+DB_DRIVER=ODBC Driver 17 for SQL Server
